--- a/.env
+++ b/.env
@@ -40,5 +40,5 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/employees?serverVersion=10.4.22-Maria
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+# MAILER_DSN=sendmail://default
 ###< symfony/mailer ###
