--- a/.env
+++ b/.env
@@ -41,4 +41,5 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/employees?serverVersion=10.4.22-Maria
 
 ###> symfony/mailer ###
 # MAILER_DSN=sendmail://default
+MAILER_DSN=smtp://85450a5f22a3e9:a0d5f20c74caf7@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
