--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -16,7 +16,7 @@ framework:
             # sync: 'sync://'
 
         routing:
-            Symfony\Component\Mailer\Messenger\SendEmailMessage: async
+            #Symfony\Component\Mailer\Messenger\SendEmailMessage: async     #Désactivé pour l'envoi d'email
             Symfony\Component\Notifier\Message\ChatMessage: async
             Symfony\Component\Notifier\Message\SmsMessage: async
 
